apps/vesta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vesta
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vesta
  template:
    metadata:
      labels:
        app: vesta
    spec:
      containers:
        - image: ghcr.io/nori-cloud/vesta:226d320
          name: vesta
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
