apps/vesta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vesta
  namespace: nori-cloud
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: vesta
