apps/vesta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vesta
  namespace: nori-cloud
  labels:
    app: vesta
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: vesta
      port:
        number: 3000
  tls:
    - hosts:
        - vesta
